--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Viacheslav's Project</title>
 </head>
 <body>
-    
+    <h1>This is new Title</h1>
+    <p>This is new paragraph</p>
 </body>
 </html>
