--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <title>Viacheslav's Project</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <h1>This is new Title</h1>
