--- a/index.html
+++ b/index.html
@@ -1,12 +1,75 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <meta charset="UTF-8" />
-    <title>Viacheslav's Project</title>
-    <link rel="stylesheet" href="index.css">
+  <meta charset="UTF-8">
+  <title>Video Games and Public Perception (1995–2010)</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>This is new Title</h1>
-    <p>This is new paragraph</p>
+  <header>
+    <h1>Change Over Time: Video Games and Public Perception (1995–2010)</h1>
+    <nav>
+      <a href="#intro">Introduction</a>
+      <a href="#year1995">1995</a>
+      <a href="#year2000">2000</a>
+      <a href="#year2010">2010</a>
+      <a href="#compare">Graphics Comparison</a>
+      <a href="#perception">Public Perception</a>
+      <a href="#sources">Sources</a>
+    </nav>
+  </header>
+
+  <main>
+    <section id="intro">
+      <h2>Introduction</h2>
+      <p>This website explores how video game graphics and public perception changed from 1995 to 2010. It covers technological advances and how society's view of games shifted over time.</p>
+    </section>
+
+    <section id="year1995">
+      <h2>1995: Early 3D and Pixel Art</h2>
+      <img src="images/placeholder.jpg" alt="Game from 1995">
+      <p>Games like <strong>Doom</strong> and <strong>Tekken 2</strong> used pixelated graphics and simple 3D models. At the time, these visuals were groundbreaking, but they now appear quite basic.</p>
+    </section>
+
+    <section id="year2000">
+      <h2>2000: Graphic Revolution</h2>
+      <img src="images/placeholder.jpg" alt="Game from 2000">
+      <p>Games like <strong>The Sims</strong> and <strong>Halo</strong> introduced more realistic characters and environments. Developers used improved 3D engines and lighting techniques.</p>
+    </section>
+
+    <section id="year2010">
+      <h2>2010: Cinematic Realism</h2>
+      <img src="images/placeholder.jpg" alt="Game from 2010">
+      <p>By 2010, games like <strong>Red Dead Redemption</strong> and <strong>Mass Effect 2</strong> used motion capture and HD textures. These titles blurred the line between games and movies.</p>
+    </section>
+
+    <section id="compare">
+      <h2>Graphics Comparison</h2>
+      <p>Visual evolution from 1995 to 2010:</p>
+      <img src="images/placeholder.jpg" alt="Graphics Comparison">
+    </section>
+
+    <section id="perception">
+      <h2>Public Perception Over Time</h2>
+      <ul>
+        <li><strong>1995:</strong> “Games are for kids”</li>
+        <li><strong>2000:</strong> “Games are mainstream”</li>
+        <li><strong>2010:</strong> “Games are a form of art”</li>
+      </ul>
+    </section>
+
+    <section id="sources">
+      <h2>Sources</h2>
+      <p>1. Kent, Steven. *The Ultimate History of Video Games*. Three Rivers Press, 2001.</p>
+      <p>2. GamePro Magazine Archives (Primary source)</p>
+      <p>3. ESA Industry Reports, 2005–2010</p>
+      <p>4. IGN Retrospectives and Reviews</p>
+      <p>5. Wikipedia (used for timeline reference)</p>
+    </section>
+  </main>
+
+  <footer>
+    <p>Student project. All game images belong to their respective owners.</p>
+  </footer>
 </body>
 </html>
