--- a/index.html
+++ b/index.html
@@ -1,11 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Sus Image</title>
+  <meta charset="UTF-8">
+  <title>Change Over Time: Video Games and Public Perception (1995–2010)</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>SUS</h1>
-    <img src="https://media.printables.com/media/prints/805028/images/6229664_71e303a8-2acd-4422-9999-85a0d5d9826e_286916d1-d0e8-4c27-8dbc-7b1972d6f89a/thumbs/inside/1280x960/webp/meme-6195988_1280.webp" alt="sus image" width="400">
+  <header>
+    <h1>Change Over Time: Video Games and Public Perception (1995–2010)</h1>
+    <nav>
+      <a href="#intro">Introduction</a>
+      <a href="#claim">Claim</a>
+      <a href="#timeline">Timeline</a>
+      <a href="#changes">Major Changes</a>
+      <a href="#perception">Public Perception</a>
+      <a href="#sources">Sources</a>
+    </nav>
+  </header>
+
+  <main>
+    <section id="intro">
+      <h2>Introduction</h2>
+      <p>Between 1995 and 2010, video game graphics evolved dramatically—from pixelated art to cinematic realism. This project explores how those changes affected how the public saw games: from “just toys” to a powerful storytelling medium.</p>
+    </section>
+
+    <section id="claim">
+      <h2>Claim</h2>
+      <p><strong>Between 1995 and 2010,</strong> improvements in video game graphics played a major role in changing public perception, helping games be seen not just as entertainment but as legitimate culture and even art.</p>
+    </section>
+
+    <section id="timeline">
+      <h2>Key Evidence Timeline</h2>
+
+      <h3>1995</h3>
+      <p><em>Doom</em> used 2.5D pixel graphics that were innovative at the time. But games were still seen as simple and childish.</p>
+      <img src="https://images.mobygames.com/images/shots/l/86119-the-ultimate-doom-dos-screenshot-one-of-the-early-levels.png" alt="Doom screenshot 1995">
+
+      <h3>2000</h3>
+      <p><em>Halo: Combat Evolved</em> showed how far 3D design had come—smooth environments, AI enemies, and immersive worlds helped games grow in seriousness.</p>
+      <img src="https://images.mobygames.com/images/shots/l/80717-halo-combat-evolved-windows-screenshot-i-m-in-a-war-now.png" alt="Halo 2001 screenshot">
+
+      <h3>2010</h3>
+      <p><em>Red Dead Redemption</em> used HD graphics, motion capture, and complex open-world design. It made players feel like they were in a movie—changing how society viewed games forever.</p>
+      <img src="https://images.mobygames.com/images/shots/l/436783-red-dead-redemption-playstation-3-screenshot-riding-in-the.png" alt="Red Dead Redemption 2010 screenshot">
+    </section>
+
+    <section id="changes">
+      <h2>Major Changes</h2>
+      <ul>
+        <li><strong>Technology:</strong> Graphics cards, 3D engines, HD displays, motion capture.</li>
+        <li><strong>Design:</strong> Games became more narrative-focused and cinematic.</li>
+        <li><strong>Audience:</strong> Older, broader player base with new expectations.</li>
+        <li><strong>Debate:</strong> Concerns over violence, addiction, realism, and impact on youth.</li>
+      </ul>
+    </section>
+
+    <section id="perception">
+      <h2>Public Perception Timeline</h2>
+      <ul>
+        <li><strong>1995:</strong> “Games are just for fun or for kids.”</li>
+        <li><strong>2000:</strong> “Games are cool and popular.”</li>
+        <li><strong>2010:</strong> “Games can be serious, artistic, or even dangerous.”</li>
+      </ul>
+      <p><em>Most valuable takeaway:</em> I learned how fast technology can shape society’s opinions, and how games became more than entertainment.</p>
+    </section>
+
+    <section id="sources">
+      <h2>Sources</h2>
+      <ul>
+        <li>Kent, Steven. <em>The Ultimate History of Video Games</em>. Three Rivers Press, 2001.</li>
+        <li>ESA. “Essential Facts About the Video Game Industry,” 2005–2010.</li>
+        <li>GamePro Magazine Archives (primary source).</li>
+        <li>Mobygames.com (game screenshots and metadata).</li>
+        <li>IGN.com game reviews and retrospectives.</li>
+      </ul>
+    </section>
+  </main>
+
+  <footer>
+    <p>Student project. All game images are copyright of their respective developers and used for educational purposes only.</p>
+  </footer>
 </body>
 </html>
