--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Change Over Time: Video Games and Public Perception (1995–2010)</title>
+  <title>Change Over Time: Video Game Graphics & Public Perception (1995–2010)</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -21,48 +21,52 @@
   <main>
     <section id="intro">
       <h2>Introduction</h2>
-      <p>Between 1995 and 2010, video game graphics evolved dramatically—from pixelated art to cinematic realism. This project explores how those changes affected how the public saw games: from “just toys” to a powerful storytelling medium.</p>
+      <p>Between 1995 and 2010, video game graphics evolved dramatically—from pixelated art to cinematic realism. This project explores how visual advancements changed the way society views video games.</p>
     </section>
 
     <section id="claim">
       <h2>Claim</h2>
-      <p><strong>Between 1995 and 2010,</strong> improvements in video game graphics played a major role in changing public perception, helping games be seen not just as entertainment but as legitimate culture and even art.</p>
+      <p><strong>Between 1995 and 2010,</strong> improvements in graphics technology fundamentally shifted public perception of games—from childlike entertainment to serious, artistic content.</p>
     </section>
 
     <section id="timeline">
       <h2>Key Evidence Timeline</h2>
 
-      <h3>1995</h3>
-      <p><em>Doom</em> used 2.5D pixel graphics that were innovative at the time. But games were still seen as simple and childish.</p>
-      <img src="https://images.mobygames.com/images/shots/l/86119-the-ultimate-doom-dos-screenshot-one-of-the-early-levels.png" alt="Doom screenshot 1995">
+      <h3>1995: Doom</h3>
+      <p><em>Doom</em> used pixel-art and early 3D rendering. Game visuals felt groundbreaking but still primitive.</p>
+      <img src="https://images.mobygames.com/images/shots/l/86119-the-ultimate-doom-dos-screenshot-one-of-the-early-levels.png" alt="Doom DOS screenshot from 1995">
 
-      <h3>2000</h3>
-      <p><em>Halo: Combat Evolved</em> showed how far 3D design had come—smooth environments, AI enemies, and immersive worlds helped games grow in seriousness.</p>
-      <img src="https://images.mobygames.com/images/shots/l/80717-halo-combat-evolved-windows-screenshot-i-m-in-a-war-now.png" alt="Halo 2001 screenshot">
+      <h3>1995: Doom (PlayStation)</h3>
+      <p>Later ports, like the PlayStation version, added simple lighting effects and colors.</p>
+      <img src="https://images.mobygames.com/images/shots/l/492002-doom-playstation-screenshot-the-psx-release-adds-colored.png" alt="Doom PS1 screenshot">
 
-      <h3>2010</h3>
-      <p><em>Red Dead Redemption</em> used HD graphics, motion capture, and complex open-world design. It made players feel like they were in a movie—changing how society viewed games forever.</p>
-      <img src="https://images.mobygames.com/images/shots/l/436783-red-dead-redemption-playstation-3-screenshot-riding-in-the.png" alt="Red Dead Redemption 2010 screenshot">
+      <h3>2000: Halo</h3>
+      <p><em>Halo: Combat Evolved</em> offered immersive 3D, smooth environments, and richer storytelling.</p>
+      <img src="https://images.mobygames.com/images/shots/l/80717-halo-combat-evolved-windows-screenshot-i-m-in-a-war-now.png" alt="Halo screenshot from 2001">
+
+      <h3>2010: Red Dead Redemption</h3>
+      <p><em>Red Dead Redemption</em> achieved cinematic realism using HD textures, motion capture, and dynamic lighting.</p>
+      <img src="https://images.mobygames.com/images/shots/l/436783-red-dead-redemption-playstation-3-screenshot-riding-in-the.png" alt="Red Dead Redemption screenshot 2010">
     </section>
 
     <section id="changes">
       <h2>Major Changes</h2>
       <ul>
-        <li><strong>Technology:</strong> Graphics cards, 3D engines, HD displays, motion capture.</li>
-        <li><strong>Design:</strong> Games became more narrative-focused and cinematic.</li>
-        <li><strong>Audience:</strong> Older, broader player base with new expectations.</li>
-        <li><strong>Debate:</strong> Concerns over violence, addiction, realism, and impact on youth.</li>
+        <li><strong>Technology:</strong> Rise of GPU, advanced lighting, motion capture</li>
+        <li><strong>Design:</strong> Shift from pixel/art style to immersive storytelling</li>
+        <li><strong>Audience:</strong> Broader age groups, including adults</li>
+        <li><strong>Debates:</strong> Emerging concerns about realism, violence, and screen time</li>
       </ul>
     </section>
 
     <section id="perception">
       <h2>Public Perception Timeline</h2>
       <ul>
-        <li><strong>1995:</strong> “Games are just for fun or for kids.”</li>
-        <li><strong>2000:</strong> “Games are cool and popular.”</li>
-        <li><strong>2010:</strong> “Games can be serious, artistic, or even dangerous.”</li>
+        <li><strong>1995:</strong> “Games are just fun.”</li>
+        <li><strong>2000:</strong> “They’re cool, mainstream.”</li>
+        <li><strong>2010:</strong> “They’re art, but also contentious.”</li>
       </ul>
-      <p><em>Most valuable takeaway:</em> I learned how fast technology can shape society’s opinions, and how games became more than entertainment.</p>
+      <p><em>Key insight:</em> Technology drives cultural perception—realism leads to respect, but also controversy.</p>
     </section>
 
     <section id="sources">
@@ -71,14 +75,14 @@
         <li>Kent, Steven. <em>The Ultimate History of Video Games</em>. Three Rivers Press, 2001.</li>
         <li>ESA. “Essential Facts About the Video Game Industry,” 2005–2010.</li>
         <li>GamePro Magazine Archives (primary source).</li>
-        <li>Mobygames.com (game screenshots and metadata).</li>
-        <li>IGN.com game reviews and retrospectives.</li>
+        <li>Mobygames.com (game images and data).</li>
+        <li>IGN.com – Reviews and retrospectives.</li>
       </ul>
     </section>
   </main>
 
   <footer>
-    <p>Student project. All game images are copyright of their respective developers and used for educational purposes only.</p>
+    <p>Student project. Images are owned by their creators and used for educational purposes only.</p>
   </footer>
 </body>
 </html>
