--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <input type="radio" name="r" id="slide4">
 
       <div class="slide s1">
-        <img src="https://i.imgur.com/your_im5.png" alt="Doom 1995 screenshot">
+        <img src="https://i.ytimg.com/vi/Zcn0DfNoEoM/sddefault.jpg" alt="Doom 1995 screenshot">
         <p>Doom (1995) – early 3D FPS with flat sprites over fake-3D environments.</p>
       </div>
       <div class="slide s2">
