--- a/index.html
+++ b/index.html
@@ -3,65 +3,116 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Evolution of Game Graphics (1995–2010)</title>
-  <link rel="stylesheet" href="styles.css" />
+  <title>Video Game Graphics and Public Perception (1995–2010)</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header>
-    <h1>The Evolution of Video Game Graphics (1995–2010)</h1>
-    <p>Tracking graphical progress and public perception through iconic milestones.</p>
+    <h1>Change Over Time: Video Game Graphics and Public Perception (1995–2010)</h1>
+    <p>This site explores how video games changed in both visual quality and public perception over 15 years.</p>
   </header>
 
-  <section class="slider">
-    <div class="slides">
-      <input type="radio" name="r" id="slide1" checked>
-      <input type="radio" name="r" id="slide2">
-      <input type="radio" name="r" id="slide3">
-      <input type="radio" name="r" id="slide4">
+  <main>
+    <section>
+      <h2>Introduction</h2>
+      <p>
+        Between 1995 and 2010, video game graphics improved significantly due to rapid advances in computer technology,
+        graphics hardware, and design techniques. This evolution didn’t just affect how games looked — it influenced how
+        society viewed video games themselves. At the beginning of this period, games were mostly seen as entertainment
+        for kids and teenagers. By 2010, they had evolved into cinematic, immersive experiences that were often compared
+        to film and even considered a form of art. In this project, we’ll examine how improvements in graphics technology
+        helped video games gain cultural legitimacy and changed how people talked about and understood them.
+      </p>
+    </section>
 
-      <div class="slide s1">
-        <img src="https://i.ytimg.com/vi/Zcn0DfNoEoM/sddefault.jpg" alt="Doom 1995 screenshot">
-        <p>Doom (1995) – early 3D FPS with flat sprites over fake-3D environments.</p>
-      </div>
-      <div class="slide s2">
-        <img src="https://i.imgur.com/your_im10.png" alt="Halo: Combat Evolved 2001 screenshot">
-        <p>Halo: Combat Evolved (2001) – introduction of 3D polygons and lighting, more immersive.</p>
-      </div>
-      <div class="slide s3">
-        <img src="https://i.imgur.com/your_im0.png" alt="Red Dead Redemption 2010 screenshot">
-        <p>Red Dead Redemption (2010) – cinematic visuals, dynamic weather, realistic lighting and textures.</p>
-      </div>
-      <div class="slide s4">
-        <img src="https://i.imgur.com/your_im3.png" alt="Red Dead train scene">
-        <p>RDR town & train combo – detailed environment and storytelling visuals.</p>
-      </div>
+    <section>
+      <h2>Claim</h2>
+      <p>
+        Between 1995 and 2010, improvements in video game graphics played a key role in shifting public perception of games
+        — from childish distractions to serious cultural works. This shift was driven by better technology, storytelling,
+        and increasing media attention.
+      </p>
+    </section>
 
-      <div class="navigation">
-        <label for="slide1" class="nav-dot" id="dot1"></label>
-        <label for="slide2" class="nav-dot" id="dot2"></label>
-        <label for="slide3" class="nav-dot" id="dot3"></label>
-        <label for="slide4" class="nav-dot" id="dot4"></label>
-      </div>
-    </div>
-  </section>
+    <section>
+      <h2>1995: Simple 3D and Pixel Art</h2>
+      <img src="https://upload.wikimedia.org/wikipedia/en/5/57/Doom_cover_art.jpg" alt="Doom 1995 box art" />
+      <p>
+        In 1995, most video games were still using 2D or early 3D graphics. One of the most iconic games of that time was
+        <em>Doom</em>, a first-person shooter known for its fast gameplay and gory combat. The graphics were considered
+        advanced back then, using a pseudo-3D engine and pixelated sprites. However, to modern eyes, the visuals look flat,
+        repetitive, and blocky. Still, Doom helped shape the first-person shooter genre and introduced millions of players
+        to the idea of immersive, digital environments. Despite its success, games like Doom were not seen as "serious" media.
+        They were often blamed for promoting violence, especially among teenagers, and rarely received positive attention
+        from the mainstream press. This reflected a common belief at the time that video games were mostly meant for kids
+        and lacked any deep artistic or cultural value. The simple visuals reinforced this view: they were fun and engaging,
+        but not respected.
+      </p>
+    </section>
 
-  <section class="content">
-    <article>
-      <h2>1. Doom (1995)</h2>
-      <p>Flat sprites, 2.5D environments. Health/armor HUD and pixelated demons. Public saw groundbreaking FPS visuals.</p>
-    </article>
-    <article>
-      <h2>2. Halo: Combat Evolved (2001)</h2>
-      <p>Fully 3D polygon rendering, dynamic lighting, realistic environments. FPS became immersive and cinematic.</p>
-    </article>
-    <article>
-      <h2>3. Red Dead Redemption (2010)</h2>
-      <p>Cinematic scale, detailed textures, day–night cycle, weather effects. Public viewed these visuals as near-movie quality.</p>
-    </article>
-  </section>
+    <section>
+      <h2>2000: Realistic Environments and 3D Worlds</h2>
+      <img src="https://upload.wikimedia.org/wikipedia/en/e/e5/Halo_-_Combat_Evolved_(XBox_version_-_box_art).jpg" alt="Halo 2001 cover art" />
+      <p>
+        By the year 2000, 3D graphics had become standard, and game worlds were becoming larger, more detailed, and more immersive.
+        <em>Halo: Combat Evolved</em>, released in 2001, is a perfect example. The game used advanced lighting, texture mapping,
+        and polygon-based models to create futuristic environments that felt alive and believable. In addition to technical
+        advances, game stories also improved. Halo combined military science fiction with dramatic music and character development,
+        helping players feel emotionally connected to the experience. By this time, games had become a major part of popular
+        culture. They were no longer just for kids — adults played them too. Media coverage improved slightly, though concerns
+        about video game violence and addiction were still common in public discussions. What made Halo especially influential
+        was how it combined technical achievement with cultural significance. It became a reference point for what games could
+        do both visually and narratively.
+      </p>
+    </section>
+
+    <section>
+      <h2>2010: Cinematic and Emotional Storytelling</h2>
+      <img src="https://upload.wikimedia.org/wikipedia/en/2/2d/Red_Dead_Redemption.jpg" alt="Red Dead Redemption 2010" />
+      <p>
+        By 2010, games like <em>Red Dead Redemption</em> and <em>Mass Effect 2</em> featured near-photorealistic graphics,
+        complex facial animations, and expansive open worlds. Red Dead Redemption in particular used advanced lighting,
+        motion capture, and detailed textures to create a Western world that felt authentic and emotionally powerful.
+        Players could ride horses across vast deserts, watch sunsets, or explore lively towns full of NPCs (non-player characters).
+        Games like these received critical acclaim not just from gaming media, but also from mainstream publications like
+        <em>The New York Times</em> and <em>The Guardian</em>. By this point, many people began to refer to games as “art.”
+        The perception of games had changed — they were now capable of delivering emotional and narrative depth similar to film or books.
+        This level of quality would not have been possible without the massive graphical improvements that took place over the years.
+        Motion capture allowed for realistic human movement, while high-definition textures made environments feel real. The line
+        between reality and virtual worlds was starting to blur, and society began taking games more seriously because of it.
+      </p>
+    </section>
+
+    <section>
+      <h2>Public Perception Over Time</h2>
+      <ul>
+        <li><strong>1995:</strong> Games are fun but childish. Mostly for kids or teens.</li>
+        <li><strong>2000:</strong> Games are cool and increasingly mainstream, but still controversial.</li>
+        <li><strong>2010:</strong> Games are complex, artistic, and culturally important.</li>
+      </ul>
+      <p>
+        The graphics revolution helped legitimize video games in the eyes of the public. Better visuals allowed for more
+        emotional storytelling, more believable characters, and more immersive worlds. With those elements in place,
+        games earned a new level of respect. The transformation wasn’t only about pixels — it was about perception. As
+        graphics improved, so did the credibility of video games. As technology advanced, so did society's willingness to
+        see games as more than just a way to pass time.
+      </p>
+    </section>
+
+    <section>
+      <h2>Sources</h2>
+      <ul>
+        <li>Kent, Steven L. <em>The Ultimate History of Video Games</em>. Three Rivers Press, 2001.</li>
+        <li>Entertainment Software Association. “Essential Facts Reports.” 2005–2010.</li>
+        <li>GamePro Magazine Archives. 1990s issues. (Primary source)</li>
+        <li>IGN.com. Game reviews and retrospectives (Halo, Red Dead Redemption)</li>
+        <li>Wikipedia articles for game release info and media assets (used for dates and box art)</li>
+      </ul>
+    </section>
+  </main>
 
   <footer>
-    <p>Project by [Your Name] • Period: 1995–2010</p>
+    <p>This is a student project for educational purposes. All images belong to their original creators.</p>
   </footer>
 </body>
 </html>
