--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
     <section>
       <h2>1995: Simple 3D and Pixel Art</h2>
-      <img src="https://upload.wikimedia.org/wikipedia/en/5/57/Doom_cover_art.jpg" alt="Doom 1995 box art" />
+      <img src="https://i.ytimg.com/vi/Zcn0DfNoEoM/sddefault.jpg" alt="Doom 1995 box art" />
       <p>
         In 1995, most video games were still using 2D or early 3D graphics. One of the most iconic games of that time was
         <em>Doom</em>, a first-person shooter known for its fast gameplay and gory combat. The graphics were considered
@@ -52,7 +52,7 @@
 
     <section>
       <h2>2000: Realistic Environments and 3D Worlds</h2>
-      <img src="https://upload.wikimedia.org/wikipedia/en/e/e5/Halo_-_Combat_Evolved_(XBox_version_-_box_art).jpg" alt="Halo 2001 cover art" />
+      <img src="https://cdn.mobygames.com/screenshots/10089844-halo-combat-evolved-windows-a-large-scale-assault-on-a-covenant-.jpg_(XBox_version_-_box_art).jpg" alt="Halo 2001 cover art" />
       <p>
         By the year 2000, 3D graphics had become standard, and game worlds were becoming larger, more detailed, and more immersive.
         <em>Halo: Combat Evolved</em>, released in 2001, is a perfect example. The game used advanced lighting, texture mapping,
@@ -68,7 +68,7 @@
 
     <section>
       <h2>2010: Cinematic and Emotional Storytelling</h2>
-      <img src="https://upload.wikimedia.org/wikipedia/en/2/2d/Red_Dead_Redemption.jpg" alt="Red Dead Redemption 2010" />
+      <img src="https://cdn.mobygames.com/screenshots/11677958-red-dead-redemption-playstation-3-life-if-active-in-the-world-tr.jpg.jpg" alt="Red Dead Redemption 2010" />
       <p>
         By 2010, games like <em>Red Dead Redemption</em> and <em>Mass Effect 2</em> featured near-photorealistic graphics,
         complex facial animations, and expansive open worlds. Red Dead Redemption in particular used advanced lighting,
