--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         graphics hardware, and design techniques. This evolution didn’t just affect how games looked — it influenced how
         society viewed video games themselves. At the beginning of this period, games were mostly seen as entertainment
         for kids and teenagers. By 2010, they had evolved into cinematic, immersive experiences that were often compared
-        to film and even considered a form of art. In this project, we’ll examine how improvements in graphics technology
+        to film and even considered a form of art. :3 In this project, we’ll examine how improvements in graphics technology
         helped video games gain cultural legitimacy and changed how people talked about and understood them.
       </p>
     </section>
